@@ -1,5 +1,5 @@
 AUX configure.py.patch 1582 RMD160 f32260fa941070356a21fb98c749436c89f9ea71 SHA1 7dc0aa5d30ad15c43e4e303d1f26735e710a4d26 SHA256 dbd98df4abb88791f45cd5a896ab2d0fadd6f77935d37d318f8ef05f984b313d
 DIST PyQt-x11-gpl-4.5.5-snapshot-20090730.tar.gz 6843141 RMD160 2bc3c78c18afc62c678baea718a8205f906cff42 SHA1 3fb08ca605d885d085056d2776f2b64f27017cb3 SHA256 659605ad19686b860eb23857459bd6142dd30afc4ffa05a2295b0e119f44591c
-EBUILD PyQt4-4.5.5_pre20090730.ebuild 3548 RMD160 d35daba506b54ef2a4d5f8d8ccd660878837e796 SHA1 e31df3369299e09fdc3d4d573f0f54ed1a78d62b SHA256 446a71fb9cdc8956669ce26f51d402ff2f888c1ed945942eeba9247c4256e1c8
-MISC ChangeLog 8046 RMD160 4bbe6b6f3bed171184521d21c11e5f35108c8624 SHA1 dbf7f7752623aed469ace2ccc3dedfdf51337f54 SHA256 431ecd22defb3300dfad7137bc2a30ccce8687acec533f576663c7c37ee7a580
+EBUILD PyQt4-4.5.5_pre20090730.ebuild 3662 RMD160 6e5cccae00d04225c7f018a6b0a846a05c8754a3 SHA1 f95d2f314deed9fd531bfdce8897a05c4a8dc1dc SHA256 dff6ce4c64de90e04c38990c2463ae641185751b7d9c948f63e7a70973527269
+MISC ChangeLog 8219 RMD160 3454759d1ac937325c719595d67979a0a47501de SHA1 375bd8aba3d7bf8a434a83515cdbe7f0ded8b8b2 SHA256 a765db13d90bd5d81a62f5deaf050c80adec99a49e2dba42b779b2e22c30b323
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
